--- a/uiFiles/GUI2.ui
+++ b/uiFiles/GUI2.ui
@@ -14,7 +14,7 @@
    <string>Chasm Project Utility</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/chasm_resources.qrc">
+   <iconset resource="../resources/chasm_resources.qrc">
     <normaloff>:/chasm/ICO_Files/Network/Disconnected.ICO</normaloff>:/chasm/ICO_Files/Network/Disconnected.ICO</iconset>
   </property>
   <widget class="QWidget" name="mainWidget">
@@ -110,15 +110,18 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QToolBar" name="toolBar">
+  <widget class="QToolBar" name="toolbar">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::NoContextMenu</enum>
+   </property>
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Tool Bar</string>
    </property>
    <property name="allowedAreas">
     <set>Qt::AllToolBarAreas</set>
@@ -136,7 +139,7 @@
     <enum>RightToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="actionCheckout"/>
    <addaction name="actionInstall"/>
@@ -151,7 +154,7 @@
   </widget>
   <action name="actionSettings">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Hardware/Computer.PNG</normaloff>:/chasm/PNG_Files/Hardware/Computer.PNG</iconset>
    </property>
    <property name="text">
@@ -166,7 +169,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Misc/Download.PNG</normaloff>:/chasm/PNG_Files/Misc/Download.PNG</iconset>
    </property>
    <property name="text">
@@ -178,7 +181,7 @@
   </action>
   <action name="actionCheckin">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Misc/Upload.PNG</normaloff>:/chasm/PNG_Files/Misc/Upload.PNG</iconset>
    </property>
    <property name="text">
@@ -190,7 +193,7 @@
   </action>
   <action name="actionCache_to_Alembic">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Misc/alembic_logo_Darkest.png</normaloff>:/chasm/PNG_Files/Misc/alembic_logo_Darkest.png</iconset>
    </property>
    <property name="text">
@@ -199,7 +202,7 @@
   </action>
   <action name="actionInstall">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Folders/Favourites.PNG</normaloff>:/chasm/PNG_Files/Folders/Favourites.PNG</iconset>
    </property>
    <property name="text">
@@ -211,7 +214,7 @@
   </action>
   <action name="actionUpdate_Plugins">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/Misc/Search.PNG</normaloff>:/chasm/PNG_Files/Misc/Search.PNG</iconset>
    </property>
    <property name="text">
@@ -223,7 +226,7 @@
   </action>
   <action name="actionOpen_File">
    <property name="icon">
-    <iconset resource="resources/chasm_resources.qrc">
+    <iconset resource="../resources/chasm_resources.qrc">
      <normaloff>:/chasm/PNG_Files/File_Formats/format.PNG</normaloff>:/chasm/PNG_Files/File_Formats/format.PNG</iconset>
    </property>
    <property name="text">
@@ -235,7 +238,7 @@
   </action>
  </widget>
  <resources>
-  <include location="resources/chasm_resources.qrc"/>
+  <include location="../resources/chasm_resources.qrc"/>
  </resources>
  <connections/>
 </ui>
